--- a/aboutMe.css
+++ b/aboutMe.css
@@ -5,49 +5,46 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0; /* Remove default margin */
 }
 
 /*HEADER*/
 header {
   background-color: #43c5c3;
-  padding: 0;
+  padding: 0px;
   text-align: center;
-  margin: 0; /* Remove default margin */
 }
 
-header img {
-  width: 100%; /* Make the image cover the entire header */
-  height: auto; /* Maintain aspect ratio */
-  display: block; /* Remove default inline display */
-}
 
 /*NAVIGATION BAR*/
+
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #165e79;
+  background-color:#165e79;
 }
 
 li {
   float: left;
 }
 
+
 li a {
   display: block;
   color: white;
   text-align: center;
-  padding: 0 50px;
+  padding: 0px 50px;
   text-decoration: none;
   font-size: 24px;
   font-family: papyrus;
 }
 
+
 li a:hover {
   background-color: #003;
 }
+
 
 /* Container for flexboxes */
 section {
@@ -61,4 +58,77 @@ nav {
   -ms-flex: 1;
   flex: 1;
   background: #aee6e5;
-  padding
+  padding: 10px;
+}
+
+
+/* Style the content */
+article {
+  -webkit-flex: 3;
+  -ms-flex: 3;
+  flex: 3;
+  background-color: #ebf9f9;
+  color: #165e79;
+  padding: 20px;
+ 
+}
+
+article p{
+  color: black;
+}
+
+/*CARDS*/
+/* Three columns side by side */
+.column {
+  float: left;
+  width: 33.3%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
+
+/* Display the columns below each other instead of side by side on small screens */
+@media screen and (max-width: 650px) {
+  .column {
+    width: 100%;
+    display: block;
+  }
+}
+
+/* Add some shadows to create a card effect */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+/* Some left and right padding inside the container */
+.container {
+  padding: 0 16px;
+}
+
+/* Clear floats */
+.container::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.title {
+  color: grey;
+}
+
+
+
+/* Style the footer */
+footer {
+  background-color: #165e79;
+  padding: 30px;
+  text-align: center;
+  color: white;
+  
+}
+
+/* Responsive layout - */
+@media (max-width: 600px) {
+  section {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
