--- a/aboutMe.css
+++ b/aboutMe.css
@@ -76,7 +76,7 @@ article {
   -webkit-flex: 5;
   -ms-flex: 5;
   flex: 5;
-  background-color: #ebf9f9;
+  background-color: #7bb2c9;
   color: #165e79;
   padding: 20px;
 }
