--- a/index.css
+++ b/index.css
@@ -3,18 +3,18 @@ body {
   margin: 0; /* Remove default margin */
 }
 
+/*HEADER VIDEO*/
+video {
+  display: flex;
+  max-width: 100%;
+  height: auto;
+}
+
 /*HEADER*/
 header {
   background-color: #43c5c3;
-  padding: 0;
+  padding: 20px;
   text-align: center;
-  margin: 0; /* Remove default margin */
-}
-
-header img {
-  width: 100%;
-  height: auto;
-  display: block;
 }
 
 /*NAVIGATION BAR*/
@@ -38,7 +38,7 @@ li a {
   display: block;
   color: white;
   text-align: center;
-  padding: 0px 50px;
+  padding: 5px 50px;
   text-decoration: none;
   font-size: 24px;
   font-family: papyrus;
@@ -52,6 +52,8 @@ li a:hover {
 section {
   display: -webkit-flex;
   display: flex;
+  min-height: 100vh; /* Ensure section takes at least the full viewport height */
+  flex-direction: column;
 }
 
 /* Style the navigation menu */
@@ -69,16 +71,9 @@ nav ul {
   padding: 0;
 }
 
-/* Two columns: one for the box, one for the article */
-.left-column {
-  flex: 1;
-  background-color: #7bb2c9; /* Adjust background color for the box */
-  padding: 20px;
-}
-
 /* Style the content */
 article {
-  flex: 2; /* Adjust the flex value for the article */
+  flex: 3;
   background-color: #ebf9f9;
   color: #165e79;
   padding: 20px;
@@ -94,6 +89,9 @@ footer {
   padding: 20px;
   text-align: left;
   color: white;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 @media (max-width: 600px) {
