--- a/index.css
+++ b/index.css
@@ -1,75 +1,56 @@
-@@ -3,18 +3,18 @@ body {
-  margin: 0; /* Remove default margin */
-}
-
-/*HEADER VIDEO*/
-video {
-  display: flex;
-  max-width: 100%;
-  height: auto;
-}
-
-/*HEADER*/
-header {
-  background-color: #43c5c3;
-  padding: 0;
-  padding: 20px;
-  text-align: center;
-  margin: 0; /* Remove default margin */
-}
-
-header img {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-
-/*NAVIGATION BAR*/
-@@ -38,7 +38,7 @@ li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 0px 50px;
-  padding: 5px 50px;
-  text-decoration: none;
-  font-size: 24px;
-  font-family: papyrus;
-@@ -52,6 +52,8 @@ li a:hover {
-section {
-  display: -webkit-flex;
-  display: flex;
-  min-height: 100vh; /* Ensure section takes at least the full viewport height */
-  flex-direction: column;
-}
-
-/* Style the navigation menu */
-@@ -69,16 +71,9 @@ nav ul {
-  padding: 0;
-}
-
-/* Two columns: one for the box, one for the article */
-.left-column {
-  flex: 1;
-  background-color: #7bb2c9; /* Adjust background color for the box */
-  padding: 20px;
-}
-
-/* Style the content */
-article {
-  flex: 2; /* Adjust the flex value for the article */
-  flex: 3;
+@@ -76,7 +76,7 @@ article {
+  -webkit-flex: 5;
+  -ms-flex: 5;
+  flex: 5;
+  background-color: #7bb2c9;
   background-color: #ebf9f9;
   color: #165e79;
   padding: 20px;
-@@ -94,6 +89,9 @@ footer {
-  padding: 20px;
-  text-align: left;
-  color: white;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
 }
-
+article p {
+  color: black;
+}
+/*CARDS*/
+/* Three columns side by side */
+.column {
+  float: left;
+  width: 33.3%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
+/* Display the columns below each other instead of side by side on small screens */
+@media screen and (max-width: 650px) {
+  .column {
+    width: 100%;
+    display: block;
+  }
+}
+/* Add some shadows to create a card effect */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+/* Some left and right padding inside the container */
+.container {
+  padding: 0 16px;
+}
+/* Clear floats */
+.container::after,
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+.title {
+  color: grey;
+}
+/* Style the footer */
+footer {
+  background-color: #165e79;
+  padding: 30px;
+  text-align: center;
+  color: white;
+}
+/* Responsive layout - */
 @media (max-width: 600px) {
   section {
     -webkit-flex-direction: column;
