--- a/index.css
+++ b/index.css
@@ -1,59 +1,102 @@
-@@ -76,7 +76,7 @@ article {
-  -webkit-flex: 5;
-  -ms-flex: 5;
-  flex: 5;
-  background-color: #7bb2c9;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/*HEADER VIDEO*/
+video {
+  display: flex;
+  max-width: 100%;
+  height: auto;
+}
+
+
+/*HEADER*/
+header {
+  background-color: #43c5c3;
+  padding: 20px;
+  text-align: center;
+}
+
+
+/*NAVIGATION BAR*/
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color:#165e79;
+}
+
+li {
+  float: left;
+}
+  
+li a:active {
+  background-color: #007;
+}
+
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 5px 50px;
+  text-decoration: none;
+  font-size: 24px;
+  font-family: papyrus;
+}
+
+
+li a:hover {
+  background-color: #003;
+}
+
+
+/* Container for flexboxes */
+section {
+  display: -webkit-flex;
+  display: flex;
+}
+
+/* Style the navigation menu */
+nav {
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  background: #aee6e5;
+  padding: 20px;
+}
+
+/* Style the list inside the menu */
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+/* Style the content */
+article {
+  flex: 3;
   background-color: #ebf9f9;
   color: #165e79;
   padding: 20px;
+ 
 }
-article p {
+
+article p{
   color: black;
 }
-/*CARDS*/
-/* Three columns side by side */
-.column {
-  float: left;
-  width: 33.3%;
-  margin-bottom: 16px;
-  padding: 0 8px;
-}
-/* Display the columns below each other instead of side by side on small screens */
-@media screen and (max-width: 650px) {
-  .column {
-    width: 100%;
-    display: block;
-  }
-}
-/* Add some shadows to create a card effect */
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-/* Some left and right padding inside the container */
-.container {
-  padding: 0 16px;
-}
-/* Clear floats */
-.container::after,
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-.title {
-  color: grey;
-}
+
 /* Style the footer */
 footer {
   background-color: #165e79;
-  padding: 30px;
-  text-align: center;
+  padding: 20px;
+  text-align: left;
   color: white;
 }
-/* Responsive layout - */
+
 @media (max-width: 600px) {
   section {
     -webkit-flex-direction: column;
     flex-direction: column;
   }
-}
