--- a/index.css
+++ b/index.css
@@ -87,7 +87,7 @@ article p{
 footer {
   background-color: #165e79;
   padding: 20px;
-  text-align: left;
+  text-align: center;
   color: white;
 }
 
