--- a/aboutMe.css
+++ b/aboutMe.css
@@ -86,7 +86,7 @@ article p {
 footer {
   background-color: #165e79;
   padding: 20px;
-  text-align: left;
+  text-align: center;
   color: white;
 }
 
