--- a/aboutMe.css
+++ b/aboutMe.css
@@ -11,6 +11,12 @@ header {
   text-align: center;
 }
 
+header img {
+  width: 100%; 
+  height: auto; 
+  display: block; 
+}
+
 /*NAVIGATION BAR*/
 ul {
   list-style-type: none;
