--- a/index.css
+++ b/index.css
@@ -13,6 +13,11 @@ header {
   text-align: center;
 }
 
+header img {
+  width: 100%; 
+  height: auto; 
+  display: block; 
+}
 
 /*NAVIGATION BAR*/
 
