--- a/a2.css
+++ b/a2.css
@@ -22,30 +22,26 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  overflow: hidden;
-  background-color: #165e79;
-}
-
-li {
-  float: left;
-}
-
-li a:active {
-  background-color: #007;
+  width: 200px;
+  background-color: #f1f1f1;
 }
 
 li a {
   display: block;
-  color: white;
-  text-align: center;
-  padding: 0px 50px;
+  color: #000;
+  padding: 8px 16px;
   text-decoration: none;
-  font-size: 20px;
-  font-family: papyrus;
 }
 
+/* Change the link color on hover */
 li a:hover {
-  background-color: #003;
+  background-color: #555;
+  color: white;
+}
+
+.active {
+  background-color: #04AA6D;
+  color: white;
 }
 
 /* Container for flexboxes */
