--- a/a2.css
+++ b/a2.css
@@ -1,10 +1,11 @@
+/* Resetting default margin and padding for the body */
 body {
   font-family: Arial, Helvetica, sans-serif;
-   margin: 0;
+  margin: 0;
   padding: 0;
 }
 
-/*HEADER*/
+/* Header styles */
 header {
   background-color: #43c5c3;
   padding: 0;
@@ -12,12 +13,12 @@ header {
 }
 
 header img {
-  width: 100%; 
-  height: auto; 
-  display: block; 
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
-/*NAVIGATION BAR*/
+/* Navigation bar styles */
 .navbar {
   overflow: hidden;
   background-color: #333;
@@ -32,13 +33,14 @@ header img {
   text-decoration: none;
 }
 
+/* Dropdown styles */
 .dropdown {
   float: left;
   overflow: hidden;
 }
 
 .dropdown .dropbtn {
-  font-size: 16px;  
+  font-size: 16px;
   border: none;
   outline: none;
   color: white;
@@ -78,16 +80,16 @@ header img {
   display: block;
 }
 
-/* Two columns: one for the box, one for the article */
+/* Two columns style */
 .left-column {
   flex: 1;
-  background-color: #aee6e5; /* Adjust background color for the box */
+  background-color: #aee6e5;
   padding: 20px;
 }
 
-/* Style the content */
+/* Article styles */
 article {
-  flex: 2; /* Adjust the flex value for the article */
+  flex: 2;
   background-color: #ebf9f9;
   color: #165e79;
   padding: 20px;
@@ -97,7 +99,7 @@ article p {
   color: black;
 }
 
-/* Style the footer */
+/* Footer styles */
 footer {
   background-color: #165e79;
   padding: 20px;
@@ -105,9 +107,16 @@ footer {
   color: white;
 }
 
+/* Media query for small screens */
 @media (max-width: 600px) {
   section {
     -webkit-flex-direction: column;
     flex-direction: column;
   }
+}
+
+/* Responsive image style */
+.responsive {
+  width: 100%;
+  height: auto;
 }
