--- a/index.css
+++ b/index.css
@@ -1,28 +1,27 @@
-/* Resetting default margin and padding for the body */
 body {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
+   margin: 0;
   padding: 0;
-  background-color: #f9f9f9; /* Neutral white background */
 }
 
-/* Header styles */
+/*HEADER*/
 header {
-  background-color: #ff8c66; /* Modern orange tone */
+  background-color: #43c5c3;
   padding: 0;
   text-align: center;
 }
 
 header img {
-  width: 100%;
-  height: auto;
-  display: block;
+  width: 100%; 
+  height: auto; 
+  display: block; 
 }
 
+/*NAVIGATION BAR*/
 /* Navigation bar styles */
 .navbar {
   overflow: hidden;
-  background-color: #e74c3c; /* Trendy red color */
+  background-color: #34495e; /* Trendy dark blue color */
 }
 
 .navbar a {
@@ -52,7 +51,7 @@ header img {
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: #ff6348; /* Modern red color on hover */
+  background-color: #e74c3c; /* Trendy red color on hover */
 }
 
 .dropdown-content {
@@ -74,7 +73,7 @@ header img {
 }
 
 .dropdown-content a:hover {
-  background-color: #f0e68c; /* Modern yellow tone on hover */
+  background-color: #bdc3c7; /* Lighter gray on hover */
 }
 
 .dropdown:hover .dropdown-content {
@@ -84,15 +83,16 @@ header img {
 /* Two columns style */
 .left-column {
   flex: 1;
-  background-color: #ffcc66; /* Modern orange tone */
+  background-color: #3498db; /* Trendy blue color */
   padding: 20px;
 }
 
-/* Article styles */
+
+/* Style the content */
 article {
-  flex: 2;
-  background-color: #ffd699; /* Light orange tone */
-  color: #2c3e50; /* Blue-gray text color */
+  flex: 2; /* Adjust the flex value for the article */
+  background-color: #ebf9f9;
+  color: #165e79;
   padding: 20px;
 }
 
@@ -100,24 +100,17 @@ article p {
   color: black;
 }
 
-/* Footer styles */
+/* Style the footer */
 footer {
-  background-color: #2c3e50; /* Blue-gray color */
+  background-color: #165e79;
   padding: 20px;
   text-align: center;
   color: white;
 }
 
-/* Media query for small screens */
 @media (max-width: 600px) {
   section {
     -webkit-flex-direction: column;
     flex-direction: column;
   }
-}
-
-/* Responsive image style */
-.responsive {
-  width: 100%;
-  height: auto;
 }
